--- a/index.html
+++ b/index.html
@@ -18,9 +18,29 @@
 </head>
 
 <body> 
-    <div class="container">
-	 hnbhj
-	</div>
+ <section id="header-area">
+
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-survival101">
+  <div class="container">
+     <a class="navbar-brand logo" href="#">
+       <p>Mxo</p>
+     </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarColor02">
+       <ul class="navbar-nav ml-auto">
+         <li><a class="nav-link" href="#">Home</a></li>
+         <li><a class="nav-link" href="#">Downlaod</a></li>
+         <li><a class="nav-link" href="#">Pricing</a></li>
+         <li><a class="nav-link" href="#">About</a></li>
+         <li><a class="nav-link" href="#">Sign In</a></li>
+       </ul>
+    </div>
+  </div>
+</nav>
+</section><!--/.header-area-->
+ 
   <!-- Add your site or application content here -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
