--- a/index.html
+++ b/index.html
@@ -19,27 +19,48 @@
 
 <body> 
  <section id="header-area">
-
   <nav class="navbar navbar-expand-lg navbar-dark navbar-survival101">
   <div class="container">
-     <a class="navbar-brand logo" href="#">
-       <p>Mxo</p>
-     </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-       <span class="navbar-toggler-icon"></span>
-     </button>
-     <div class="collapse navbar-collapse" id="navbarColor02">
-       <ul class="navbar-nav ml-auto">
+      <a class="navbar-brand logo" href="#">
+        <p>Mxo</p>
+      </a>
+
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarColor02">
+       <ul class="navbar-nav ml-auto" id="navigation">
          <li><a class="nav-link" href="#">Home</a></li>
          <li><a class="nav-link" href="#">Downlaod</a></li>
          <li><a class="nav-link" href="#">Pricing</a></li>
          <li><a class="nav-link" href="#">About</a></li>
-         <li><a class="nav-link" href="#">Sign In</a></li>
+         <li><a class="nav-link" href="#" id="signIn">Sign In</a></li>
        </ul>
     </div>
   </div>
 </nav>
-</section><!--/.header-area-->
+</section>
+<!--/.header-area-->
+<section id="slider-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Bset Apps Partner For Your Life</h2>
+        <p>Lorem ipsum dolor sit  ur adipisicing elit. Officiis, exercitationem?</p>
+        <a href="#" id="mxo_btn">Try For Free</a>
+        <a href="#" id="mxo_btn">Downlaod App</a>
+      </div><!--/.col-md-6-->
+      <div class="col-md-6">
+        <div class="slider-bg">
+          <img src="">
+        </div>
+      </div><!--/.col-md-6-->
+    </div>
+  </div><!--/..container-->
+</section>
+<!--/..slider-area-->
+
  
   <!-- Add your site or application content here -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
