finished slider-area

--- a/index.html
+++ b/index.html
@@ -43,21 +43,30 @@
 </section>
 <!--/.header-area-->
 <section id="slider-area">
+  <div class="slider-contenTs"> 
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <h2>Bset Apps Partner For Your Life</h2>
-        <p>Lorem ipsum dolor sit  ur adipisicing elit. Officiis, exercitationem?</p>
-        <a href="#" id="mxo_btn">Try For Free</a>
-        <a href="#" id="mxo_btn">Downlaod App</a>
+      <div class="col-md-5">
+        <div class="slider-content">
+          <h2>Bset Apps Partner For Your Life</h2>
+          <p>Lorem ipsum dolor sit  ur adipisicing elit. Officiis,
+             Lorem ipsum dolor sit  ur adipisicing elit. Officiis,
+             mamun lop for condition moynamothi
+             hjsj jeor men comgf frra monser profetion conferkv id
+              exercitationem? 
+          </p>
+          <a href="#" id="mxo_btn" class="slider-m-btn">Try For Free</a>
+          <a href="#" id="mxo_btn" class="slider-n-btn">Downlaod App</a>
+        </div><!--/.slider-content-->
       </div><!--/.col-md-6-->
-      <div class="col-md-6">
-        <div class="slider-bg">
-          <img src="">
+      <div class="col-md-7">
+        <div class="slider-bg text-center">
+          <img src="assets/images/slider-bg.jpg">
         </div>
-      </div><!--/.col-md-6-->
+      </div><!--/..col-md-6-->
     </div>
   </div><!--/..container-->
+</div><!--/..slider-contents-->
 </section>
 <!--/..slider-area-->
 
