about-area markup finished

--- a/index.html
+++ b/index.html
@@ -69,6 +69,33 @@
 </div><!--/..slider-contents-->
 </section>
 <!--/..slider-area-->
+<section id="about-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="about-hadding">
+          <h5>What We do?</h5>
+          <h3>How Can We help You</h3>
+        </div>
+      </div>
+    </div>
+  </div><!--//.container-->
+  <div class="container">
+    <div class="row"> 
+      <div class="col-md-4">
+        <div class="single-about">
+          <h3>Fully Secured</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Ipsa, ad.kads map lop go to your home
+          </p>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div><!--//.container-->
+  
+</section>
+<!--/.about-area-->
 
  
   <!-- Add your site or application content here -->
