finished about top area

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 </div><!--/..slider-contents-->
 </section>
 <!--/..slider-area-->
-<section id="about-area">
+<section id="about-top-area">
   <div class="container">
-    <div class="row">
+    <div class="row text-center">
       <div class="col-md-12">
-        <div class="about-hadding">
+        <div class="about-top-hadding">
           <h5>What We do?</h5>
           <h3>How Can We help You</h3>
         </div>
@@ -81,12 +81,31 @@
     </div>
   </div><!--//.container-->
   <div class="container">
-    <div class="row"> 
+    <div class="row text-center"> 
       <div class="col-md-4">
-        <div class="single-about">
+        <div class="single-top-about">
+           <i class="fas fa-shield-alt"></i>
           <h3>Fully Secured</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ipsa, ad.kads map lop go to your home
+            Ippsa, ad.kads map lop go to your home at last neoj
+          </p>
+        </div>
+      </div> 
+      <div class="col-md-4">
+        <div class="single-top-about">
+           <i class="fas fa-cloud-download-alt"></i>
+          <h3>Easy to Edit</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Ipsa, ad.kads map lop go to your home at last neoj
+          </p>
+        </div>
+      </div> 
+      <div class="col-md-4">
+        <div class="single-top-about">
+           <i class="fab fa-sketch"></i>
+          <h3>Design & brandimg</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Ipsa, ad.kads map lop go to your home at last neoj
           </p>
         </div>
       </div>
