added about bottom markupindex.html

--- a/index.html
+++ b/index.html
@@ -120,21 +120,45 @@
     <div class="row">
       <div class="col-md-7">
         <div class="about-middel-bg">
-          
+          <img src="assets/images/about-top-bg.jpg">
         </div>
       </div><!--/..col-md-6-->
       <div class="col-md-5">
-        <h3>Built the app that everyone love</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-           Quas fuga dolor accusamus voluptatum, ratione in dolore quaerat 
-           deserunt adipisci architecto!
-         </p>
-         <a href="#" id="mxo_btn" class="about-middel-btn">Learn More</a>
+        <div class="about-middel-content">
+           <h3>Built the app that everyone love</h3>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Quas fuga dolor accusamus voluptatum, ratione in dolore quaerat 
+              deserunt adipisci architecto! lolipop kaiba.onek shad kinthu
+           </p>
+           <a href="#" id="mxo_btn" class="about-middel-btn">Learn More</a>
+       </div><!--about-middel-content-->
       </div><!--/..col-md-6-->
     </div>
   </div><!--/..container-->
 </section>
 <!--/..about-middel-area-->
+<section id="about-bottom-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5">
+        <div class="about-bottom-content">
+           <h3>Built the app that everyone love</h3>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Quas fuga dolor accusamus voluptatum, ratione in dolore quaerat 
+              deserunt adipisci architecto! lolipop kaiba.onek shad kinthu
+           </p>
+           <a href="#" id="mxo_btn" class="about-bottom-btn">Learn More</a>
+       </div><!--about-middel-content-->
+      </div><!--/..col-md-6-->
+      <div class="col-md-7 text-center">
+        <div class="about-bottom-bg">
+          <img src="assets/images/about-bottom-bg.jpg">
+        </div>
+      </div><!--/..col-md-6-->
+    </div>
+  </div><!--/..container-->
+</section>
+<!--/..about-bottom-area-->
  
   <!-- Add your site or application content here -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
