finished features & screenshort $ plan area

--- a/index.html
+++ b/index.html
@@ -159,6 +159,138 @@
   </div><!--/..container-->
 </section>
 <!--/..about-bottom-area-->
+<section id="features-area">
+  <p>Our Goals</p>
+  <h3>Awesome Features</h3>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5"> 
+        <div class="features-bg">
+          <img src="assets/images/featueres-bg.jpg">
+        </div><!--/..features-bg-->
+      </div><!--/..col-md-4-->
+      <div class="col-md-7 text-center">
+       <div class="features-boxes">
+         <div class="features-single-box">
+            <i class="fas fa-mobile"></i> 
+            <h4>FuLly Responsible</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+              Quae, molestiae.
+            </p>
+          </div><!--/.features-single-box-->
+         <div class="features-single-box">
+          <i class="far fa-heart"></i>
+            <h4>FuLly Responsible</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+              Quae, molestiae.
+            </p>
+          </div><!--/.features-single-box-->
+         <div class="features-single-box">
+          <i class="fas fa-shield-alt"></i>
+            <h4>FuLly Responsible</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+              Quae, molestiae.
+            </p>
+          </div><!--/.features-single-box-->
+         <div class="features-single-box">
+          <i class="fab fa-fort-awesome-alt"></i>
+            <h4>FuLly Responsible</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+              Quae, molestiae.
+            </p>
+          </div><!--/.features-single-box-->
+        </div><!--/.feautures-boxes-->  
+      </div><!--/..col-md-4-->
+ 
+    </div>
+  </div><!--/..container-->
+</section>
+<!--/..features-area-->
+<section id="sreenshort">
+  <p>Visit Our Apps</p>
+  <h3>Apps Screenshort</h3>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 sreenshort-wrapper">
+        <div class="single-bg">
+          <img src="assets/images/appScreeonshort_1.jpg">
+        </div><!--/.single-bg-->
+        <div class="single-bg">
+          <img src="assets/images/appScreeonshort_1.jpg">
+        </div><!--/.single-bg-->
+        <div class="single-bg">
+          <img src="assets/images/appScreeonshort_1.jpg">
+        </div><!--/.single-bg-->
+        <div class="single-bg">
+          <img src="assets/images/appScreeonshort_1.jpg">
+        </div><!--/.single-bg-->
+        <div class="single-bg">
+          <img src="assets/images/appScreeonshort_1.jpg">
+        </div><!--/.single-bg-->
+      </div>
+    </div>
+  </div><!--/..col-md-12-->
+</section>
+<!--/.sreenshort-->
+<section id="plan-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5">
+        <div class="plan-content">
+          <h3>Not any extra charge choose you planing plan</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Temporibus delectus accusamus nesciunt, soluta suscipit aliquid
+            esse eum. Obcaecati consequatur, consectetur nam perferendis
+          </p>
+          <a href="#" id="mxo_btn">Monthly</a>
+          <a href="#" id="mxo_btn">Yearly</a>
+        </div><!--/..plan-content-->
+      </div><!--col-md-5-->
+      <div class="col-md-7">
+        <div class="price-card">
+          <div class="single-price-card">
+            <div class="card-head">
+              <div>  
+                 <h3>Advance</h3>
+                 <h4>$80<span>/mo</span></h4>
+              </div>
+              <div><i class="fas fa-shopping-cart"></i></div>
+            </div><!--/.card-head-->
+            <p>1GB Of Spach Per Year</p>
+            <p>10 hosting Per Year</p>
+            <p>30+ Email Address Per Year</p>
+            <p>Unlimited Traffic Per Year</p>
+            <p>Four Accsess Per Year</p>
+            <p>Online Support 24/7</p>
+         
+            <a href="#" id="mxo_btn" class="plan_btn">Purchase New</a>
+          </div>
+          <div class="single-price-card">
+            <div class="card-head">
+              <div>  
+                 <h3>Advance</h3>
+                 <h4>$80<span>/mo</span></h4>
+              </div>
+              <div><i class="fas fa-shopping-cart"></i></div>
+            </div><!--/.card-head-->
+            <p>1GB Of Spach Per Year</p>
+            <p>10 hosting Per Year</p>
+            <p>30+ Email Address Per Year</p>
+            <p>Unlimited Traffic Per Year</p>
+            <p>Four Accsess Per Year</p>
+            <p>Online Support 24/7</p>
+         
+             <a href="#" id="mxo_btn" class="plan_btn">Purchase New</a>
+          </div>
+      </div><!--/.price-card-->
+    </div><!--col-md-7-->
+  </div><!--/..container-->
+</section>
+<!--/..plan0-area-->
  
   <!-- Add your site or application content here -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
