added users markup

--- a/index.html
+++ b/index.html
@@ -266,7 +266,6 @@
             <p>Unlimited Traffic Per Year</p>
             <p>Four Accsess Per Year</p>
             <p>Online Support 24/7</p>
-         
             <a href="#" id="mxo_btn" class="plan_btn">Purchase New</a>
           </div>
           <div class="single-price-card">
@@ -291,6 +290,58 @@
   </div><!--/..container-->
 </section>
 <!--/..plan0-area-->
+<section id="users-area">
+  <p>Testimonial</p>
+  <h3>Our Happy Users</h3>
+          <div class="uSer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2">
+
+        <div class="user-bg">
+          <img src="assets/images/about-top-bg.jpg">       
+        </div><!--/.user-bg-->
+      </div><!--/.col-md-3-->
+      <div class="col-md-2">
+        <div class="user-bg">
+          <img src="assets/images/about-top-bg.jpg">       
+        </div><!--/.user-bg-->
+      </div><!--/.col-md-3-->
+      <div class="col-md-2">
+        <div class="user-bg">
+          <img src="assets/images/about-top-bg.jpg">       
+        </div><!--/.user-bg-->
+      </div><!--/.col-md-3-->
+      <div class="col-md-2">
+        <div class="user-bg">
+          <img src="assets/images/about-top-bg.jpg">       
+        </div><!--/.user-bg-->
+      </div><!--/.col-md-3-->
+      <div class="col-md-2">
+        <div class="user-bg">
+          <img src="assets/images/about-top-bg.jpg">       
+        </div><!--/.user-bg-->
+      </div><!--/.col-md-3-->
+      <div class="col-md-2">
+        <div class="user-bg">
+          <img src="assets/images/about-top-bg.jpg">       
+        </div><!--/.user-bg-->
+      </div><!--/.col-md-3-->
+    </div><!--row-->
+  </div><!--/..container-->
+      
+  <div class="user-bottom-content">
+    <h6>At this conbd is co-oparative & sinciar their work</h6>
+    <h6>A profetional working team</h6>
+    <h4>Martina Alexa</h4>
+    <h5>Director</h5>
+  </div>
+   </div><!--/.uSer--> 
+</section>
+<!--/..users-area-->
+<section id="contract-area">
+  
+</section>
  
   <!-- Add your site or application content here -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
