added contract markup

--- a/index.html
+++ b/index.html
@@ -340,8 +340,10 @@
 </section>
 <!--/..users-area-->
 <section id="contract-area">
-  
+  <input type="search" placeholder="Enter Your Email Address">
+  <a href="#" id="mxo_btn">Subscribe now</a>
 </section>
+ <a href="#" id="mxo_btn">Subscribe now</a>
  
   <!-- Add your site or application content here -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
