finished project responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="assets/css/main-18px.css">
   <link rel="stylesheet" href="assets/css/normalize.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">  
+  <!--cerousel-->
+  <link rel="stylesheet" href="assets/css/owl.carousel.css">
+  <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body> 
@@ -35,7 +39,7 @@
          <li><a class="nav-link" href="#">Downlaod</a></li>
          <li><a class="nav-link" href="#">Pricing</a></li>
          <li><a class="nav-link" href="#">About</a></li>
-         <li><a class="nav-link" href="#" id="signIn">Sign In</a></li>
+         <li><a class="nav-link signIn" href="#" id="mxo_btn">Sign In</a></li>
        </ul>
     </div>
   </div>
@@ -55,8 +59,8 @@
              hjsj jeor men comgf frra monser profetion conferkv id
               exercitationem? 
           </p>
-          <a href="#" id="mxo_btn" class="slider-m-btn">Try For Free</a>
-          <a href="#" id="mxo_btn" class="slider-n-btn">Downlaod App</a>
+          <a href="#" id="mxo_btn" class="mxo_btnM">Try For Free</a>
+          <a href="#" id="mxo_btn" class="mxo_btnM">Downlaod App</a>
         </div><!--/.slider-content-->
       </div><!--/.col-md-6-->
       <div class="col-md-7">
@@ -86,8 +90,15 @@
         <div class="single-top-about">
            <i class="fas fa-shield-alt"></i>
           <h3>Fully Secured</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ippsa, ad.kads map lop go to your home at last neoj
+          <p> 
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Laudantium non molestias debitis adipisci voluptatum,
+                perferendis provident alias, exercitationem tempora
+                esse atque sunt dolores doloremque soluta dolorum 
+                totam impedit possimus aliquam. Ullam consequuntur
+                quia commodi cupiditate, eos quisquam perferendis
+                dicta ea nulla, repudiandae eius dolores quibusdam 
+                doloribus blanditiis quo dolore sed.
           </p>
         </div>
       </div> 
@@ -95,8 +106,15 @@
         <div class="single-top-about">
            <i class="fas fa-cloud-download-alt"></i>
           <h3>Easy to Edit</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ipsa, ad.kads map lop go to your home at last neoj
+          <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Laudantium non molestias debitis adipisci voluptatum,
+                perferendis provident alias, exercitationem tempora
+                esse atque sunt dolores doloremque soluta dolorum 
+                totam impedit possimus aliquam. Ullam consequuntur
+                quia commodi cupiditate, eos quisquam perferendis
+                dicta ea nulla, repudiandae eius dolores quibusdam 
+                doloribus blanditiis quo dolore sed.
           </p>
         </div>
       </div> 
@@ -104,8 +122,15 @@
         <div class="single-top-about">
            <i class="fab fa-sketch"></i>
           <h3>Design & brandimg</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ipsa, ad.kads map lop go to your home at last neoj
+          <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Laudantium non molestias debitis adipisci voluptatum,
+                perferendis provident alias, exercitationem tempora
+                esse atque sunt dolores doloremque soluta dolorum 
+                totam impedit possimus aliquam. Ullam consequuntur
+                quia commodi cupiditate, eos quisquam perferendis
+                dicta ea nulla, repudiandae eius dolores quibusdam 
+                doloribus blanditiis quo dolore sed.
           </p>
         </div>
       </div>
@@ -176,7 +201,7 @@
             <h4>FuLly Responsible</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-              Quae, molestiae.
+              Quae, molestiae. life not complex if uourb btn
             </p>
           </div><!--/.features-single-box-->
          <div class="features-single-box">
@@ -184,7 +209,7 @@
             <h4>FuLly Responsible</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-              Quae, molestiae.
+              Quae, molestiae. life not complex if uourb btn
             </p>
           </div><!--/.features-single-box-->
          <div class="features-single-box">
@@ -192,7 +217,7 @@
             <h4>FuLly Responsible</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-              Quae, molestiae.
+              Quae, molestiae. life not complex if uourb btn
             </p>
           </div><!--/.features-single-box-->
          <div class="features-single-box">
@@ -200,7 +225,7 @@
             <h4>FuLly Responsible</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-              Quae, molestiae.
+              Quae, molestiae. life not complex if uourb btn
             </p>
           </div><!--/.features-single-box-->
         </div><!--/.feautures-boxes-->  
@@ -216,24 +241,14 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 sreenshort-wrapper">
-        <div class="single-bg">
-          <img src="assets/images/appScreeonshort_1.jpg">
-        </div><!--/.single-bg-->
-        <div class="single-bg">
-          <img src="assets/images/appScreeonshort_1.jpg">
-        </div><!--/.single-bg-->
-        <div class="single-bg">
-          <img src="assets/images/appScreeonshort_1.jpg">
-        </div><!--/.single-bg-->
-        <div class="single-bg">
-          <img src="assets/images/appScreeonshort_1.jpg">
-        </div><!--/.single-bg-->
-        <div class="single-bg">
-          <img src="assets/images/appScreeonshort_1.jpg">
-        </div><!--/.single-bg-->
-      </div>
-    </div>
-  </div><!--/..col-md-12-->
+        <div class ="owl-carousel owl-theme">
+         <div class ="item"><img src="assets/images/appScreeonshort_1.jpg" class="img-fluid"></div>
+         <div class ="item"><img src="assets/images/appScreeonshort_1.jpg" class="img-fluid"></div>
+         <div class ="item"><img src="assets/images/appScreeonshort_1.jpg" class="img-fluid"></div>
+         <div class ="item"><img src="assets/images/appScreeonshort_1.jpg" class="img-fluid"></div>
+         <div class ="item"><img src="assets/images/appScreeonshort_1.jpg" class="img-fluid"></div>
+        </div>
+     </div><!--/..col-md-12-->
 </section>
 <!--/.sreenshort-->
 <section id="plan-area">
@@ -293,40 +308,37 @@
 <section id="users-area">
   <p>Testimonial</p>
   <h3>Our Happy Users</h3>
-          <div class="uSer">
+ <div class="uSer">
   <div class="container">
-    <div class="row">
-      <div class="col-md-2">
+    <div class="row text-center">
+      <div class ="owl-carousel owl-theme">
 
         <div class="user-bg">
-          <img src="assets/images/about-top-bg.jpg">       
+          <img src="assets/images/squrey.jpg" class="l">       
         </div><!--/.user-bg-->
-      </div><!--/.col-md-3-->
-      <div class="col-md-2">
+
         <div class="user-bg">
-          <img src="assets/images/about-top-bg.jpg">       
+          <img src="assets/images/squrey.jpg" class="img-fluid">       
         </div><!--/.user-bg-->
-      </div><!--/.col-md-3-->
-      <div class="col-md-2">
+
         <div class="user-bg">
-          <img src="assets/images/about-top-bg.jpg">       
+          <img src="assets/images/squrey.jpg" class="img-fluid">       
         </div><!--/.user-bg-->
-      </div><!--/.col-md-3-->
-      <div class="col-md-2">
+
         <div class="user-bg">
-          <img src="assets/images/about-top-bg.jpg">       
+          <img src="assets/images/squrey.jpg" class="img-fluid">       
         </div><!--/.user-bg-->
-      </div><!--/.col-md-3-->
-      <div class="col-md-2">
+
         <div class="user-bg">
-          <img src="assets/images/about-top-bg.jpg">       
+          <img src="assets/images/squrey.jpg" class="img-fluid">       
         </div><!--/.user-bg-->
-      </div><!--/.col-md-3-->
-      <div class="col-md-2">
+ 
+ 
         <div class="user-bg">
-          <img src="assets/images/about-top-bg.jpg">       
+          <img src="assets/images/squrey.jpg" class="img-fluid">       
         </div><!--/.user-bg-->
-      </div><!--/.col-md-3-->
+  
+       </div>
     </div><!--row-->
   </div><!--/..container-->
       
@@ -343,13 +355,58 @@
   <input type="search" placeholder="Enter Your Email Address">
   <a href="#" id="mxo_btn">Subscribe now</a>
 </section>
- <a href="#" id="mxo_btn">Subscribe now</a>
+ <section id="links-area">
+   <div class="container">
+     <div class="row text-center">
+
+     <div class="links">
+
+       <div class="link">
+         <p>Links</p>
+         <p>Home</p>
+         <p>Download</p>
+         <p>Pricing</p>
+         <p>About</p>
+       </div><!--/.col-md-4-->
+       <div class="link">
+         <p>Support</p>
+         <p>FAQ</p>
+         <p>How it work</p>
+         <p>Contarct</p>
+       </div><!--/.col-md-4-->
+       <div class="link">
+         <p>Contarct Us</p>
+         <p>+880 178142652</p>
+         <p>Shimul2543@gmail.com</p>
+       </div><!--/.col-md-4-->
+       <div class="link">
+         <p>Dribble</p>
+         <p>Behance</p>
+         <p>Linkedin</p>
+         <p>twitter</p>
+       </div><!--/.col-md-4-->
+       </div><!--/.links-->
+     </div>
+   </div><!--/..container-->
+ </section>
+ <!--/..links-area-->
+ <footer>
+   <div class="container">
+     <div class="row text-center">
+      <div class="col-md-12">
+         <p class="copy">@All right Resevered by Devute</p>
+      </div>       
+       </div><!--/.col-md-12-->
+     </div>
+   </div>
+ </footer>
  
   <!-- Add your site or application content here -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+  <script src="assets/js/owl.carousel.js"></script>
   <script src="assets/js/plugins.js"></script>
   <script src="assets/js/main.js"></script>
 
